# dicom-deid-rs

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md  requirements.md
.github/workflows/: build.yml  ci.yml
examples/: gen_j2k_fixture.rs  gen_test_data.rs
resources/: complete-recipe.txt  recipes.txt  test_recipe.txt
src/: ctp.rs  error.rs  filter.rs  filter_index.rs  functions.rs  lib.rs  main.rs  metadata.rs  pipeline.rs  pixel.rs  recipe.rs  tag.rs  test_helpers.rs
tests/: compressed_pixel_data.rs  e2e_behavioral.rs  generate_fixtures.py  graylist_masking.rs
tests/fixtures/: j2k_lossless_8x8.dcm  rle_lossless_8x8.dcm
tests/fixtures/graylist/: ct_lightspeed_localizer.dcm  ct_philips_dose.dcm  us_atl_hdi5000.dcm  us_philips_iu22.dcm  us_siemens_antares.dcm  us_toshiba_aplio.dcm
