[package]
name = "dicom-deid-rs"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "dicom-deid-rs"
path = "src/main.rs"
required-features = ["pipeline"]

[dependencies]
dicom-object.workspace = true
dicom-core.workspace = true
dicom-dictionary-std.workspace = true
dicom-pixeldata = { workspace = true }
sha2 = "0.10"
regex = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
indicatif = { version = "0.17", optional = true }
rayon = { version = "1", optional = true }

[features]
default = ["pipeline", "jpeg2000"]
pipeline = ["dep:indicatif"]
parallel = ["dep:rayon"]
jpeg2000 = ["dicom-pixeldata/openjp2"]

[dev-dependencies]
tempfile = "3"
