[package]
name = "dicom-deid-rs"
edition = "2024"
version = "0.1.0"

[[bin]]
name = "dicom-deid-rs"
path = "src/main.rs"
required-features = ["pipeline"]

[dependencies]
dicom-object = "0.9"
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
dicom-pixeldata = "0.9"
sha2 = "0.10"
regex = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
indicatif = { version = "0.17", optional = true }
rayon = { version = "1", optional = true }

[features]
default = ["pipeline", "jpeg2000"]
pipeline = ["dep:indicatif"]
parallel = ["dep:rayon"]
jpeg2000 = ["dicom-pixeldata/openjp2"]

[dev-dependencies]
tempfile = "3"
